# dotfiles

./: .gitconfig  .zshrc
NUS/aspire-assignment/: dune-project
NUS/aspire-assignment/_build/: .db  .digest-db  log
NUS/aspire-assignment/_build/default/: README.md  aspire-assignment.dune-package  aspire-assignment.install  aspire-assignment.opam
NUS/aspire-assignment/_build/default/.dune/: configurator  configurator.v2
NUS/aspire-assignment/_build/default/.ppx/fe89d0afab5b6542ed8b4a4baa6707a5/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
NUS/aspire-assignment/_build/default/.utop/: utop.ml-gen
NUS/aspire-assignment/_build/default/lib/: aspire_assignment.cma
NUS/aspire-assignment/_build/default/lib/.merlin-conf/: lib-aspire_assignment
NUS/aspire-assignment/_build/default/lib/bc/: aspire__Main_cmd.cmi  aspire__Main_driver.cmi  aspire__Main_pass.cmi  aspire__Pos.cmi  aspire__Untyped.cmi  aspire__Util_lex.cmi  aspire__Util_parse.cmi  (+1 more)
NUS/aspire-assignment/lib/: README.md  dune
NUS/aspire-assignment/owen-eval-tests/: owen1.aspire.result  owen10.aspire.result  owen11.aspire  owen11.aspire.result  owen12.aspire  owen12.aspire.result  owen3.aspire  owen4.aspire  owen4.aspire.result  owen6.aspire  owen6.aspire.result  owen7.aspire.result  owen8.aspire  owen8.aspire.result
NUS/aspire-assignment/owen-parse-tests/: owen14.aspire  owen15.aspire  owen16.aspire  owen16.aspire.result
NUS/aspire-assignment/owen-tests/: owen10.aspire  owen12.aspire  owen12.aspire.result  owen7.aspire  owen7.aspire.result  owen9.aspire  owen9.aspire.result
(+9 files in other folders)
