(lang dune 3.20)

(name aspire-assignment)
(version 2026.01.23)

(authors NONE)
(license LicenseRef-Proprietary)
(homepage NONE)
(bug_reports NONE)
(maintainers NONE)

(generate_opam_files true)
(using menhir 3.0)

(package
 (name aspire-assignment)
 (synopsis "CS4215 assignment")
 (depends
  (ocaml (= 5.2.1))
  ; ocaml-option-afl ;; UNUSED for now
  ; (bisect_ppx :dev) ;; UNUSED in student assignments ;; NOTE: must disable ppx_deriving_qcheck when using bisect_ppx
  (alcotest (= 1.9.1))
  (cmdliner (= 2.1.0))
  (crowbar (= 0.2.2))
  (menhir (= 20250912))
  (ppx_deriving (= 6.1.1))
  (ppx_deriving_qcheck (= 0.9))
  (ppx_import (= 1.12.0))
  (qcheck-core (= 0.91))
  (sexplib (= v0.17.0))
 )
)
